Fix toolbar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,7 @@ body {
 /* ======= */
 
 .toolbar {
-  bottom: -50px;
+  bottom: 0;
   height: 50px;
   position: sticky;
   z-index: 1000;
@@ -116,12 +116,13 @@ body {
 
 @media (max-width: 450px) {
   #app {
-    margin-bottom: 0;
+    margin-bottom: 50px;
     margin-top: 0;
-    min-height: 100vh;
-  }
-  .editor {
     min-height: calc(100vh - 50px);
+  }
+  .toolbar {
+    position: fixed;
+    width: 100%;
   }
 }
 
